// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Quarry.Infrastructure.Persistence;

#nullable disable

namespace Quarry.Infrastructure.Migrations
{
    [DbContext(typeof(QuarryDbContext))]
    [Migration("20260910181727_AddPublishedSnapshotsAndCatalogRevision")]
    partial class AddPublishedSnapshotsAndCatalogRevision
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.7")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("Quarry.Infrastructure.Persistence.CatalogStateEntity", b =>
                {
                    b.Property<int>("Id")
                        .HasColumnType("int");

                    b.Property<long>("Revision")
                        .HasColumnType("bigint");

                    b.HasKey("Id");

                    b.ToTable("CatalogState", (string)null);

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Revision = 0L
                        });
                });

            modelBuilder.Entity("Quarry.Infrastructure.Persistence.FrameworkDraftEntity", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("MetadataJson")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Revision")
                        .IsRequired()
                        .HasMaxLength(30)
                        .HasColumnType("nvarchar(30)");

                    b.HasKey("Id");

                    b.ToTable("FrameworkDrafts", (string)null);
                });

            modelBuilder.Entity("Quarry.Infrastructure.Persistence.FrameworkRevisionEntity", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("CapabilitiesJson")
                        .IsRequired()
                        .HasMaxLength(8000)
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("ComponentCount")
                        .HasColumnType("int");

                    b.Property<string>("ComponentsJson")
                        .IsRequired()
                        .HasMaxLength(16000)
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasMaxLength(4000)
                        .HasColumnType("nvarchar(4000)");

                    b.Property<bool>("IsPublished")
                        .HasColumnType("bit");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.Property<string>("Revision")
                        .IsRequired()
                        .HasMaxLength(30)
                        .HasColumnType("nvarchar(30)");

                    b.Property<string>("TagsJson")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Technology")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("nvarchar(50)");

                    b.Property<string>("UseCasesJson")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.HasIndex("IsPublished", "Technology", "Name");

                    b.ToTable("FrameworkRevisions", (string)null);
                });

            modelBuilder.Entity("Quarry.Infrastructure.Persistence.FrameworkVectorEntity", b =>
                {
                    b.Property<Guid>("FrameworkId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<int>("Dimensions")
                        .HasColumnType("int");

                    b.Property<DateTimeOffset>("IndexedAtUtc")
                        .HasColumnType("datetimeoffset");

                    b.Property<string>("Model")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.Property<string>("SourceRevision")
                        .IsRequired()
                        .HasMaxLength(30)
                        .HasColumnType("nvarchar(30)");

                    b.Property<string>("ValuesJson")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("FrameworkId");

                    b.HasIndex("Model", "Dimensions");

                    b.ToTable("FrameworkVectors", (string)null);
                });

            modelBuilder.Entity("Quarry.Infrastructure.Persistence.IndexWorkItemEntity", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<int>("AttemptCount")
                        .HasColumnType("int");

                    b.Property<DateTimeOffset>("CreatedAtUtc")
                        .HasColumnType("datetimeoffset");

                    b.Property<Guid>("FrameworkId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("LastError")
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<DateTimeOffset?>("LeaseExpiresAtUtc")
                        .HasColumnType("datetimeoffset");

                    b.Property<Guid?>("LeaseId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("Model")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.Property<DateTimeOffset>("NextAttemptAtUtc")
                        .HasColumnType("datetimeoffset");

                    b.Property<string>("SourceRevision")
                        .IsRequired()
                        .HasMaxLength(30)
                        .HasColumnType("nvarchar(30)");

                    b.Property<string>("State")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("nvarchar(20)");

                    b.HasKey("Id");

                    b.HasIndex("State", "NextAttemptAtUtc");

                    b.HasIndex("FrameworkId", "SourceRevision", "Model")
                        .IsUnique();

                    b.ToTable("IndexWorkItems", (string)null);
                });

            modelBuilder.Entity("Quarry.Infrastructure.Persistence.MaintenanceAuditRecordEntity", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("ActorId")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("CorrelationId")
                        .IsRequired()
                        .HasMaxLength(128)
                        .HasColumnType("nvarchar(128)");

                    b.Property<int>("InvalidatedVectorCount")
                        .HasColumnType("int");

                    b.Property<string>("Operation")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<string>("Outcome")
                        .IsRequired()
                        .HasMaxLength(40)
                        .HasColumnType("nvarchar(40)");

                    b.Property<DateTimeOffset>("RecordedAtUtc")
                        .HasColumnType("datetimeoffset");

                    b.Property<string>("SourceRevision")
                        .HasMaxLength(30)
                        .HasColumnType("nvarchar(30)");

                    b.Property<Guid?>("TargetId")
                        .HasColumnType("uniqueidentifier");

                    b.HasKey("Id");

                    b.HasIndex("RecordedAtUtc");

                    b.ToTable("MaintenanceAuditRecords", (string)null);
                });

            modelBuilder.Entity("Quarry.Infrastructure.Persistence.PublishedFrameworkSnapshotEntity", b =>
                {
                    b.Property<Guid>("FrameworkId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("Revision")
                        .HasMaxLength(30)
                        .HasColumnType("nvarchar(30)");

                    b.Property<string>("EvidenceJson")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("MetadataJson")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<DateTimeOffset>("PublishedAtUtc")
                        .HasColumnType("datetimeoffset");

                    b.Property<string>("PublishedBy")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("FrameworkId", "Revision");

                    b.ToTable("PublishedFrameworkSnapshots", (string)null);
                });
#pragma warning restore 612, 618
        }
    }
}
